# Project_cpp_UdeA

./: .gitignore  README.md
Guia_1/: README.md  code_practica_1.py
Guia_1/code_g1/code_g1/: main.cpp
Guia_2/: README.md
Guia_2/code_g2/code_g2/: main.cpp
Guia_3/: README.md  dataset_Encriptado0.txt  dataset_Original_hint_0.txt
Guia_3/code_g3/code_g3/: main.cpp
Guia_3/dataset_encriptado_1/: dataset_Encriptado0.txt  dataset_Encriptado1.txt  dataset_Encriptado2.txt  dataset_Encriptado3.txt  dataset_Encriptado4.txt  dataset_Encriptado5.txt  dataset_Original_hint_1.txt  dataset_Original_hint_2.txt  dataset_Original_hint_3.txt  dataset_Original_hint_4.txt  dataset_Original_hint_5.txt
Guia_4/: README.md
Guia_4/Documents/: enrutador.h  main.cpp  red.h
Guia_4/Documents/STL_/STL_List/: CMakeLists.txt  main.cpp
Guia_4/Documents/STL_/STL_Map/: CMakeLists.txt  main.cpp
Guia_4/code_g4/: red_enrutadores.txt
Guia_5/: README.md  code_graph_python.py  simulation_output.txt
Guia_D1/: README.md
Guia_D1/code_python/: code_d1.py
Guia_D2/: Grupo_A.csv  Grupo_A_Simulado.csv  Grupo_B.csv  Grupo_B_Simulado.csv  Grupo_C.csv  Grupo_C_Simulado.csv  Grupo_D.csv  Grupo_D_Simulado.csv  Grupo_E.csv  Grupo_E_Simulado.csv  Grupo_F.csv  Grupo_F_Simulado.csv  Grupo_G.csv  Grupo_G_Simulado.csv  Grupo_H.csv  Grupo_H_Simulado.csv  Grupo_I.csv  Grupo_I_Simulado.csv  Grupo_J.csv  Grupo_J_Simulado.csv  Grupo_K.csv  Grupo_K_Simulado.csv  Grupo_L.csv  Grupo_L_Simulado.csv  Posiciones_Finales_Mundial_2026.csv  README.md  Resumen_Eliminatorias_2026.csv  selecciones_clasificadas_mundial.csv
Guia_D3/: README.md
Guia_D3/code_d3/: CMakeLists.txt  main.cpp
(+10 files in other folders)
