cmake_minimum_required(VERSION 3.16)

project(STL_List LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(STL_List main.cpp)

include(GNUInstallDirs)
install(TARGETS STL_List
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
