cmake_minimum_required(VERSION 3.16)

project(STL_Map LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(STL_Map main.cpp)

include(GNUInstallDirs)
install(TARGETS STL_Map
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
